--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,10 @@ jobs:
         steps:
         - uses: actions/checkout@v2
         - name: SonarCloud Scan
-          uses: SonarSource/sonarcloud-github-action@v1.6
+          uses: sonarsource/sonarcloud-github-action@master
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         - name: build-push
           uses: docker/build-push-action@v1
           with:
@@ -20,6 +23,3 @@ jobs:
             registry: docker.io
             repository: yoniperetti/cd
             tag_with_sha: true
-	
-   
-
