--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,14 @@ jobs:
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            with:
+              projectBaseDir: my-custom-directory
+              - name: Analyze with SonarCloud
+              uses: sonarsource/sonarcloud-github-action@master
+              with:
+                args: >
+                  -Dsonar.organization=my-organization
+                  -Dsonar.projectKey=my-projectkey
         - name: build-push
           uses: docker/build-push-action@v1
           with:
