--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,13 +16,9 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
             with:
-              projectBaseDir: my-custom-directory
-              - name: Analyze with SonarCloud
-              uses: sonarsource/sonarcloud-github-action@master
-              with:
-                args: >
-                  -Dsonar.organization=my-organization
-                  -Dsonar.projectKey=my-projectkey
+              args: >
+                -Dsonar.organization=Yoniiii_cd
+                -Dsonar.projectKey=yoniiii
         - name: build-push
           uses: docker/build-push-action@v1
           with:
