--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,11 @@ jobs:
         - uses: actions/checkout@v2
         - name: SonarCloud Scan
           uses: sonarsource/sonarcloud-github-action@master
+          with:
+            projectBaseDir: my-custom-directory
+            args: >
+              -Dsonar.organization=Yoniiii_cd
+              -Dsonar.projectKey=yoniiii
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
