--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
         steps:
         - uses: actions/checkout@v2
         - name: SonarCloud Scan
-          uses: sonarsource/sonarcloud-github-action@master
+          uses: sonarsource/sonarcloud-github-action@main
           with:
             projectBaseDir: .
             args: >
