--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
           run: |
             npm install --production --unsafe-perm
         - name: SonarCloud Scan
-          uses: sonarsource/sonarcloud-github-action@master
+          uses: sonarsource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
           with:
             projectBaseDir: .
             args: >
