--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,12 +14,11 @@ jobs:
           run: |
             npm install --production --unsafe-perm
         - name: SonarCloud Scan
-          uses: sonarsource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
+          uses: sonarsource/sonarcloud-github-action@master
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           with:
-            projectBaseDir: .
             args:
               -Dsonar.organization=Yoniiii_cd
               -Dsonar.projectKey=yoniiii
