--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,9 @@ jobs:
             args:
               -Dsonar.organization=yoniiii
               -Dsonar.projectKey=Yoniiii_cd
+        - uses: sburris/dependency-check-action@master
+            with:
+              Project-Name: TestApp
         - name: Archive dependency check reports
           uses: actions/upload-artifact@v1
           with:
