--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,16 +31,6 @@ jobs:
             name: sonar_reports
             path: reports
 
-        - name: Run Trivy vulnerability scanner
-          uses: aquasecurity/trivy-action@master
-          with:
-            image-ref: 'docker.io/yoniperetti/cd:${{ github.sha }}'
-            format: 'table'
-            exit-code: '1'
-            ignore-unfixed: true
-            vuln-type: 'os,library'
-            severity: 'CRITICAL,HIGH'
-
         - name: build-push
           uses: docker/build-push-action@v1
           with:
@@ -49,3 +39,16 @@ jobs:
             registry: docker.io
             repository: yoniperetti/cd
             tag_with_sha: true
+
+        - name: Set outputs
+          id: vars
+          run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+        - name: Run Trivy vulnerability scanner
+          uses: aquasecurity/trivy-action@master
+          with:
+            image-ref: docker.io/3r1co/cd:sha-${{ steps.vars.outputs.sha_short }}
+            format: 'table'
+            exit-code: '0'
+            ignore-unfixed: true
+            vuln-type: 'os,library'
+            severity: 'CRITICAL,HIGH'
